Finished the tip sheet

--- a/models.html
+++ b/models.html
@@ -43,8 +43,8 @@
   
   <main role="main" class="container">
   <ul class="list-group">
-    <li class="list-group-item"><a href="beta.html">Beta Distribution</a></li>
-    <li class="list-group-item"><a href="binomial.html">Binomial Distribution</a></li>
+    <li class="list-group-item"><a href="models/beta.html">Beta Distribution</a></li>
+    <li class="list-group-item"><a href="models/binomial.html">Binomial Distribution</a></li>
   </ul>
   </main>
 </body>
