--- a/resources/apstatstest.html
+++ b/resources/apstatstest.html
@@ -24,16 +24,16 @@
     <div class="">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="models.html">Models</a>
+          <a class="nav-link" href="../models.html">Models</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resource.html">Student Advice</a>
+          <a class="nav-link" href="../resource.html">Student Advice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="disclosure.html">Disclosures</a>
+          <a class="nav-link" href="../disclosure.html">Disclosures</a>
         </li>
       </ul>
     </div>
