--- a/resources/studentadvice.html
+++ b/resources/studentadvice.html
@@ -375,7 +375,7 @@
           you would fair in a traditional undergrad intro stats course.
           Important: The AP Stats and WGU Stats exam are NOT similar. So
           do not use it as a gauge for how well you'd do on the WGUCexam;
-          that's what the 3 practice exams are for. Use the <a href="resources/apstatstest.html">AP Stats exam</a>
+          that's what the 3 practice exams are for. Use the <a href="apstatstest.html">AP Stats exam</a>
           to test how well you can comprehend stats concepts from any
           sources.
         </li>
