--- a/resources/tipsheet.html
+++ b/resources/tipsheet.html
@@ -2,53 +2,56 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/css/page.css">
-  <link rel="stylesheet" type="text/css"
-    href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/slate/bootstrap.min.css" />
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
-  <title>C741 Tip Sheet</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="/css/page.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/slate/bootstrap.min.css"
+	/>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	 crossorigin="anonymous">
+
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous">
+
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	 crossorigin="anonymous">
+
+	</script>
+	<title>C741 Tip Sheet</title>
 </head>
 
 <body>
 
-  <body>
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-      <div class="">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../models.html">Models</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../resource.html">Student Resources</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../disclosure.html">Disclosures</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+	<body>
+		<nav class="navbar navbar-expand navbar-dark bg-dark">
+			<div class="">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="../index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../models.html">Models</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="../resource.html">Student Resources</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../disclosure.html">Disclosures</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-    <br />
+		<br />
 
     <main role="main" class="container">
-      <h4>C741 Tip Sheet</h4>
+      <h4><strong>C741 Tip Sheet</strong></h4>
       
       <div class="list-group list-group-flush">
         <ol class="list">
-          <li>Eigenvalues and Eigenvectors
+          <li><strong>Eigenvalues and Eigenvectors</strong>
             <ul>
               <li><a
                   href="https://www.khanacademy.org/math/linear-algebra/alternate-bases/eigen-everything/v/linear-algebra-introduction-to-eigenvalues-and-eigenvectors">Khan
@@ -63,7 +66,7 @@
                   calculus</a></li>
             </ul>
           </li>
-          <li>Principal Component Analysis (PCA)
+          <li><strong>Principal Component Analysis (PCA)</strong>
             <ul>
               <li><a href="http://faculty.iiit.ac.in/~mkrishna/PrincipalComponents.pdf">A tutorial on PCA</a></li>
               <li><a
@@ -77,9 +80,69 @@
               <li><a href="https://www.youtube.com/watch?v=BfTMmoDFXyE">A YouTube Presentation of PCA</a></li>
             </ul>
           </li>
+          <li><strong>Z-Scores Made Easy (how many deviations above or below the mean)</strong>
+            <ul>
+              <li><a href="http://www.wikihow.com/Calculate-Z-Scores">Wikihow on calculating Z-Scores</a></li>
+              <li><a href="https://www.youtube.com/watch?v=_86q-hn_3DQ">Good, funny video explaining Z-Scores, P-Values, tracing the curve</a></li>
+              <li><a href="http://www.statisticshowto.com/probability-and-statistics/z-score/">Try Statistics Show, thos one has a video, too!</a></li>
+              <li><a href="https://www.youtube.com/watch?v=mai23vW8uFM">Using a Z-Score Table from West Texas A&M University</a></li>
+              <li><a href="https://www.youtube.com/watch?v=1o-t_mVDDYQ">Now, how about YouTube from MySecretMathTutor for a finale?</a></li>
+            </ul>
+          </li>
+          <li><strong>Chi-Square Method</strong>
+            <ul>
+              <li><a href="http://www.statisticshowto.com/what-is-a-chi-square-statistic/">Chi-Square from StatisticsShow</a></li>
+              <li><a href="https://www.youtube.com/watch?v=WXPBoFDqNVk">YouTube Chi-Square and Goodness of Fit</a></li>
+            </ul>
+          </li>
+          <li><strong>ANOVAs</strong>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=q48uKU_KWas">One Way ANOVA by Hand</a></li>
+              <li><a href="http://www.excel-easy.com/examples/anova.html">ANOVA in Excel by example</a></li>
+              <li><a href="https://www.youtube.com/watch?v=6tmCEFBu5c0">Statistics Made Easy: ANOVA</a></li>
+            </ul>
+          </li>
+          <li><strong>T-Tests (Distributions with the same mean)</strong>
+            <ul>
+              <li><a href="https://www.youtube.com/watch?v=mmi5GoCVjBY">Statistics Made Easy: T-Tests</a></li>
+              <li><a href="http://www.excel-easy.com/examples/t-test.html">T-Test in Excel by example</a></li>
+              <li><a href="http://www.statisticshowto.com/t-test/">Statistics How To definition and example</a></li>
+            </ul>
+          </li>
+          <li><strong>Test Tips from Student Comment (New! As of 7/15/2019)</strong>
+            <ul>
+              <li>Kaiser Criterion.  If you have attended my Sunday Live Webinars you may have heard me talk about it.  The Kaiser Criterion states that PC below and eigenvalue of 1.0 can be dropped (ignored).</li>
+              <li>Homoscedasticity.  It means the variables have essentially the same variance.  We see this in linear regression where the data points all follow the regression line closely.  Its opposite is heteroscedasticity which means that there is a greater dispersion of the data points relative to the regression line.</li>
+              <li>T-tests.  It appears that t-tests are back on the exam and you are required to calculate a t-value of a set data from two groups.  Our new slides this month will deal with t-tests.  So, look for them.  Meanwhile, practice your t-tests given the means, variance, and n of each group.</li>
+              <li>Read the questions carefully.  Take your time.  Read each question and the responses at least twice.  Then, perform a process-of-elimination to find the Best Answer.</li>
+              <li>Calculator.  Several students have reported that the test is much less calculator dependent as in prior versions.</li>
+              <li>Eigenvalues.  There have been no eigenvalue calculation problems recently.  So, you will not have to solve the quadratic equation and factor your terms as in the past.</li>
+              <li>F-statistic.  Be sure to watch and practice F-statistic calculations and solving the ANOVA table given missing terms.</li>
+            </ul>
+          </li>
+          <li><strong>Calculator Section!  New!  Additional information that helped me to get better understanding of statistics:</strong>
+            <ul>
+              <li><a href="http://www.stat.ncsu.edu/people/davidian/courses/st732/notes/">Additional notes</a></li>
+              <li><a href="https://www.youtube.com/watch?v=oXb0b8vBQxM&list=PLA73A1EBB93346282">Basic stat review</a></li>
+              <li><strong>Calculator tutorials:</strong></li>
+              <ul>
+                <li><a href="https://www.youtube.com/watch?v=ShwFWQ0ikZw">https://www.youtube.com/watch?v=ShwFWQ0ikZw</a></li>
+                <li><a href="https://www.youtube.com/watch?v=1l9wZDTaLAc">https://www.youtube.com/watch?v=1l9wZDTaLAc</a></li>
+                <li><a href="https://www.youtube.com/watch?v=Yj9cPzq4ZDU">https://www.youtube.com/watch?v=Yj9cPzq4ZDU</a></li>
+                <li><a href="https://www.youtube.com/watch?v=0Vj2V2qRU10&t=158s">https://www.youtube.com/watch?v=0Vj2V2qRU10&t=158s</a></li>
+              </ul>
+            </ul>
+          </li>
+          <li><strong>Statistical Symbols  New!</strong>
+            <ul>
+              <li><a href="https://www.statistics.com/statsymbols.pdf">https://www.statistics.com/statsymbols.pdf</a></li>
+              <li><a href="https://www.rapidtables.com/math/symbols/Statistical_Symbols.html">https://www.rapidtables.com/math/symbols/Statistical_Symbols.html</a></li>
+            </ul>
+          </li>
         </ol>
       </div>
     </main>
+    <footer style="background:gray;color:black;text-align:center;">Added descriptions for some video links</footer>
   </body>
 
 </html>
