--- a/mybits.html
+++ b/mybits.html
@@ -1,52 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/css/page.css">
-  <link rel="stylesheet" type="text/css"
-    href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/slate/bootstrap.min.css" />
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+<head id="header">
+  <script src="//code.jquery.com/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <script>
+      $.get("templates/header.html", function(data){
+        $("#header").replaceWith(data);
+      });  
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-  </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
-  <title>My Bits</title>
+   
+	<title>My Bits</title>
 </head>
 
-<body>
+	<body>
+		<div id="nav-placeholder"></div>
 
-  <body>
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-      <div class="">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="models.html">Models</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="resource.html">Student Resources</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="disclosure.html">Disclosures</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <br />
+		<br />
 
     <main role="main" class="container">
       <h4>This is a collection of notes and links that I found interesting or useful.</h4>
       <br />
-      <table class="table table-sm table-dark table-striped table-bordered">
+      <table class="table table-sm table-dark table-striped table-bordered table-hover">
         <caption><strong style="color:cornflowerblue">Parametric vs Nonparametric Tests</strong></caption>
         <thead>
           <tr> 
@@ -69,8 +44,8 @@
           </tr>
         </tbody>
       </table>
-      <table class="table table-sm table-dark table-striped table-bordered">
-        <caption><strong style="color: cornflowerblue;caption-side: top;">Hypothesis Tests for continuous data</strong></caption>
+      <table class="table table-sm table-dark table-striped table-bordered table-hover">
+        <caption><strong style="color: cornflowerblue;">Hypothesis Tests for continuous data</strong></caption>
         <thead>
           <tr>
             <td><strong>What you are testing</strong></td>
@@ -92,6 +67,105 @@
           </tr>
         </tbody>
       </table>
+
+      <table class="table table-sm table-dark table-striped table-bordered table-hover">
+        <caption><strong style="color: cornflowerblue;">Input and Output Datatypes by Method</strong></caption>
+        <thead>
+          <tr>
+            <td></td>
+            <td><strong>Categorical</strong></td>
+            <td><strong>Continuous</strong></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>Categorical</strong></td>
+            <td>Chi-Squared<br />Fisher's Exact Test</td>
+            <td>Kruskal-Wallis<br />Wilcoxon</td>
+          </tr>
+          <tr>
+            <td><strong>Continuous</strong></td>
+            <td>ANOVA</td>
+            <td>ANOVA<br />T-test<br />Z-test</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <td style="text-align:center;color:cornflowerblue;font-weight:bold">Input Value</td>
+          <td style="text-align:center;color:cornflowerblue;font-weight:bold" colspan="2">Output Value</td>
+        </tfoot>
+      </table>
+
+      <div id=ch2>
+        <h5>Chapter 2</h5>
+        <p>Explain and identify <strong>random variables</strong>, <strong>discrete variables</strong>,
+          <strong>continuous variables</strong>, <strong>distributions</strong>, <strong>confidence intervals</strong>,
+          and <strong>hypothesis testing</strong></p>
+        <table class="table table-sm table-dark table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <td>Term</td>
+              <td>Definition</td>
+              <td>Example</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table-success">
+              <td>Random Variables</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Random Variable</td>
+              <td>A rule that assigns a number to every outcome in the sample space of an experiment.</td>
+              <td>In a coin toss experiment, a random variable may assign 1 to heads and 0 to tails.</td>
+            </tr>
+            <tr class="table-warning">
+              <td>Discrete Random Variable</td>
+              <td>A random variable with a countable number or distinct values.</td>
+              <td>All integers between 0 and 100.</td>
+            </tr>
+            <tr>
+              <td>Continuous Random Variable</td>
+              <td>A random variable representing any value with a range of values.</td>
+              <td>All real numbers between 0 and 100.</td>
+            </tr>
+            <tr class="table-success">
+              <td>Distributions</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Probability Mass Function (pmf)</td>
+              <td>Assigns the probability that a discrete random variable is exactly equal to some value.</td>
+              <td> In recent years, 2% of the adult population of the U.S. is classified as underweight, 27% as normal
+                weight, 33% as overweight, and 38% as obese. The pmf of W is then p(W=0) = 0.02, p(W=1) = 0.27, p(W=2) =
+                0.33 and p(W=3) = 0.38. The probabilities assigned in a pmf are between 0 and 1, and the total
+                probability must sum to 1. </td>
+            </tr>
+            <tr class="table-warning">
+              <td>Cumulative Distribution Function (cdf)</td>
+              <td>The probability that for any number x, the observed value of the random variable will be at most x or
+                p(X&le;x)</td>
+              <td>When a fair die is rolled and the value facing up recorded, the cdf describes the probability of
+                getting less than or equal to any value x, such as the probability X is less than or equal to 3; p(X ≤
+                3) = p(1) + p(2) + p(3).</td>
+            </tr>
+            <tr>
+              <td>Probability Density Function (pdf)</td>
+              <td>Describes the likelihood of all values for a continuous random variable</td>
+              <td>The amount of time for Casey to do his chores is a random variable, X, where all values between 1 hour
+                and 2 hours are equally likely.</td>
+            </tr>
+            <tr class="table-warning">
+              <td>Binomial Distribution</td>
+              <td>Models how many times an event occurs in a certain number of trials.</td>
+              <td>A basketball player is fouled 3 on a 3 point shot attempt and awarded 3 free throws. This models the
+                number of free throws the player makes.</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
     </main>
   </body>
 
