--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="https://www.mathjax.org">MathJax</a> which lets you use TeX, LaTEX, and MathML markup. Here is a <a
         href="http://www.onemathematicalcat.org/MathJaxDocumentation/TeXSyntax.htm#E"> link</a> to a resource that
       contains the TeX commands that are available in MathJax. There is also a much simpler method which, obviously,
-      provides more simplistic results, an <a href="https://www.htmlhelp.com/reference/html40/entities/symbols.html">HTML
+      provides more simplistic results, an <a target="_blank" href="https://www.htmlhelp.com/reference/html40/entities/symbols.html">HTML
         unicode character list</a>.</p>
   </main>
 </body>
