Changes to models

--- a/models.html
+++ b/models.html
@@ -34,23 +34,17 @@
 		<br />
   
   <main role="main" class="container">
-    <table>
-      <tbody>
-        <tr>
-          <td><a role="button" class="btn btn-primary" href="models/wilcoxon.html" target="myframe">Wilcoxon</a></td>
-          <td rowspan="8"><iframe name="myframe" src="resources/placeholder.html" height="800" width="800" frameborder="0"></iframe>      </td>
-        </tr>
-        <tr>
-          <td><a role="button" class="btn btn-primary" href="models/kruskal.html" target="myframe">Kruskal-Wallis</a></td>
-        </tr>
-        <tr>
-          <td><a role="button" class="btn btn-primary" href="models/binomial.html" target="myframe">Binomial</a></td>
-        </tr>
-        <tr>
-          <td><a role="button" class="btn btn-primary" href="models/1sampttest.html" target="myframe">One Sample T-Test</a></td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="row">
+      <div class="col-2">
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/wilcoxon.html" target="myframe">Wilcoxon</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/kruskal.html" target="myframe">Kruskal-Wallis</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/binomial.html" target="myframe">Binomial</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/1sampttest.html" target="myframe">One Sample T-Test</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/1sampttest.html" target="myframe">Chi-Squared Test</a>
+      </div>
+      <div class="col-10">
+        <iframe name="myframe" src="resources/placeholder.html" height="800" width="800" frameborder="0"></iframe>
+      </div>
   </main>
 </body>
 
